--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clean:cache": "rimraf node_modules/.cache/ && rimraf node_modules/.vite",
     "clean:lib": "rimraf node_modules",
     "lint": "eslint src --ext .ts",
-    "lint:fix":"eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix",
+    "lint:fix": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix",
     "lint:eslint": "eslint --cache --max-warnings 0  \"{src,mock}/**/*.{vue,ts,tsx}\" --fix",
     "lint:prettier": "prettier --write  \"src/**/*.{js,json,tsx,css,less,scss,vue,html,md}\"",
     "lint:stylelint": "stylelint --cache --fix \"**/*.{vue,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
@@ -23,22 +23,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@quasar/extras": "^1.15.3",
+    "@vitejs/plugin-vue": "^3.1.0",
     "commitlint": "^17.1.2",
     "eslint-config-airbnb": "^19.0.4",
+    "pinia": "^2.0.22",
+    "vite": "^3.1.0",
     "vue": "^3.2.37",
-    "@vitejs/plugin-vue": "^3.1.0",
-    "vite": "^3.1.0"
+    "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
-  
     "autoprefixer": "^10.4.9",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.4.0",
-    "husky": "^8.0.0",
     "jest": "^29.0.3",
     "lint-staged": "^13.0.3",
     "postcss": "^8.4.16",
@@ -55,19 +56,6 @@
     "stylelint-config-standard-scss": "^5.0.0",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
-    
     "vue-tsc": "^0.40.4"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx,tsx,json,css,scss,md}": [
-      "prettier --write",
-      "eslint",
-      "git add"
-    ]
   }
 }
