--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "commitlint": "^17.1.2",
     "eslint-config-airbnb": "^19.0.4",
     "pinia": "^2.0.22",
+    "quasar": "^2.8.2",
     "vite": "^3.1.0",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
+    "@quasar/vite-plugin": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
     "autoprefixer": "^10.4.11",
@@ -48,6 +50,7 @@
     "postcss-lit": "^0.5.0",
     "prettier": "2.7.1",
     "pretty-quick": "^3.1.3",
+    "sass": "^1.32.12",
     "stylelint": "^14.11.0",
     "stylelint-config-html": "^1.1.0",
     "stylelint-config-prettier": "^9.0.3",
